- Summary: Enhance Properties/Advanced View
- Bugzilla Bug (s) Resolved: 247937

- Description:  Enhance Properties/Advanced View

- Tests Description: Manual test.

- Notes to Build Team:

- Notes to Developers:

- Notes to QA:

- Notes to Documentation:

- Files Added:


- Files Edited:


- Files Deleted: